gitops/apps/openmrs.yaml
# --- 1. BASE DE DONNÉES (MARIADB) ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmrs-db
  namespace: medmission
spec:
  selector:
    matchLabels:
      app: openmrs-db
  template:
    metadata:
      labels:
        app: openmrs-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11.7
        args: ["--character-set-server=utf8mb4", "--collation-server=utf8mb4_general_ci"]
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: medmission
spec:
  selector:
    app: openmrs-db
  ports:
    - port: 3306

---
# --- 2. BACKEND OPENMRS ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmrs-backend
  namespace: medmission
spec:
  selector:
    matchLabels:
      app: openmrs-backend
  template:
    metadata:
      labels:
        app: openmrs-backend
    spec:
      containers:
      - name: backend
        image: openmrs/openmrs-reference-application-3-backend:qa
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: medmission
spec:
  selector:
    app: openmrs-backend
  ports:
    - port: 8080

---
# --- 3. FRONTEND OPENMRS ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openmrs-frontend
  namespace: medmission
spec:
  selector:
    matchLabels:
      app: openmrs-frontend
  template:
    metadata:
      labels:
        app: openmrs-frontend
    spec:
      containers:
      - name: frontend
        image: openmrs/openmrs-reference-application-3-frontend:qa
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: medmission
spec:
  selector:
    app: openmrs-frontend
  ports:
    - port: 80

---
# --- 4. INGRESS ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmrs-ingress
  namespace: medmission
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /metabase(.*)
        pathType: Prefix
        backend:
          service:
            name: metabase-service
            port:
              number: 3000
      - path: /openmrs/spa(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
      - path: /openmrs(.*)
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
  ---
# --- 5. METABASE ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: medmission
spec:
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: metabase-service
  namespace: medmission
spec:
  selector:
    app: metabase
  ports:
    - port: 3000
